vxlan: Add support for socket ioctls SIOC[SG]TUNFIB

Submitted by: Luiz Amaral <email@luiz.eng.br>
PR:	244004
Reviewed by:	gbe (manpages), melifaro, pauamma (manpages)
Approved by:	kp (mentor)
MFC after:	2 weeks
Differential Revision:	https://reviews.freebsd.org/D32820

(cherry picked from commit 7f7a804ae077a0c43d8c3f1444f90bdfb841c6b1)
(cherry picked from commit 8819353dd0dfddb9bcd156a2773efc3770d09eff)